scrollbarr fixed

--- a/Styles/canvas.module.css
+++ b/Styles/canvas.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 10px;
   overflow-x: hidden;
   box-sizing: border-box;
@@ -33,6 +33,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+ 
   max-width: 800px;
   margin-bottom: 10px;
 }
